--- a/blogpost.html
+++ b/blogpost.html
@@ -4,8 +4,12 @@
  <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
+    <div  id="container">
+        <div id="post"
+        <h1> Este es el titulo atractivo e interesante del post</h1>
+    </div>
     <h1>Aqui vamos hacer un blog spot</h1>
-    <p>y este es el parrafo de inicio</p>
+    <p>y este es el parrafo de inicio donde vamos a explicar las cosas increibles que se pueden hacer con ramas </p>
     
 </body>
 </html>
