Cambios de rama master contenido adicional y tipografia

--- a/blogpost.html
+++ b/blogpost.html
@@ -10,6 +10,9 @@
     </div>
     <h1>Aqui vamos hacer un blog spot</h1>
     <p>y este es el parrafo de inicio donde vamos a explicar las cosas increibles que se pueden hacer con ramas </p>
+    <p>LOS BLOGS SON LA MEJOR FORMA DE COMPARTIR INFORMACION, ESTE CAMBIO LO ESTAMOS HACIENDO DESDE MASTER, SIN TOMAR EN CUENTA 
+        LO QUE LLEVAMOS EN CABECERA.
+    </p>
     
 </body>
 </html>
