--- a/blogpost.html
+++ b/blogpost.html
@@ -7,7 +7,7 @@
     <div  id="container">
         <div id="cabecera">
            HiperBlog
-            <span id="tagline">Tu blog de confianza </span>
+            <span id="tagline">Tu blog Maestro </span>
         </div>
         <div id="post"
         <h1> Este es el titulo atractivo e interesante del post</h1>
@@ -17,6 +17,7 @@
     <p>LOS BLOGS SON LA MEJOR FORMA DE COMPARTIR INFORMACION, ESTE CAMBIO LO ESTAMOS HACIENDO DESDE MASTER, SIN TOMAR EN CUENTA 
         LO QUE LLEVAMOS EN CABECERA.
     </p>
+    <p>Suscribete y dale like Maestro</p>
     
 </body>
 </html>
