--- a/blogpost.html
+++ b/blogpost.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>  El titulo del post cambios desde Git Hub  </title>
+<title>  Bienvenidos a HyperBlog 2.0  </title>
  <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
