--- a/blogpost.html
+++ b/blogpost.html
@@ -13,7 +13,7 @@
         <h1> Este es el titulo atractivo e interesante del post</h1>
     </div>
     <h1>Aqui vamos hacer un blog spot</h1>
-    <p>y este es el párrafo de inicio donde vamos a explicar las cosas increíble que se pueden hacer con ramas </p>
+    <p>y este es el p&aacute;rrafo de inicio donde vamos a explicar las cosas incre&iacute;ble que se pueden hacer con ramas </p>
     <p>LOS BLOGS SON LA MEJOR FORMA DE COMPARTIR INFORMACION, ESTE CAMBIO LO ESTAMOS HACIENDO DESDE MASTER, SIN TOMAR EN CUENTA 
         LO QUE LLEVAMOS EN CABECERA.
     </p>
